style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  min-height: 100vh;          /* full screen height */
  display: flex;
  flex-direction: column;
  background-color: #f2f7ff;
}

header {
  padding: 40px;
  display: flex;
  justify-content: space-between; /* left text, right buttons */
  align-items: center;            /* vertical alignment */
}

header h1{
    margin-bottom: 15px;
}

header p{
    font-size: 20px;
    color: blue;
}

.header-text {
  max-width: 70%;
}

.header-actions {
  display: flex;
  gap: 10px; /* space between buttons */
}

.header-actions button {
  padding: 8px 16px;
  cursor: pointer;
}

#btnsignup{
  background-color: #2563eb;
  color: white;
  border: none;
  border-radius: 6px;
}

#btnsignup:hover{
  color: red;
}

#btnlogin{
  background-color: #f3f4f6;
  color: #1f2937;
  border: #d1d5db;
  border-radius: 6px;
}

#btnlogin:hover{
  color: #e5e7eb;
}
#container1{
    text-align: center;
    background-color:black;
    color: white;
    width: 300px;
    margin: 20px auto
}


#sub:hover, #clr:hover{
  background-color: grey;
}

#container2{
    text-align: center;
    background-color:lightskyblue;
    color: white;
    width: 300px;
    margin: 20px auto
}

footer {
  margin-top: auto;           /* MAGIC LINE ✨ */
  margin-left: 10px;
  margin-right: 10px;
  background: #222;
  color: white;
  text-align: center;
  padding: 15px;
}

